// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorAuditLogsPageComponent should snap when page is still loading 1`] = `
<tm-instructor-audit-logs-page
  LOGS_RETENTION_PERIOD={[Function Number]}
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courseToStudents={[Function Object]}
  courses={[Function Array]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  formModel={[Function Object]}
  isLoading={[Function Boolean]}
  isSearching="false"
  logsService={[Function LogService]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session for a given course. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><div
    id="logs-output"
  >
    
    <div>
      
    </div>
  </div>
</tm-instructor-audit-logs-page>
`;

exports[`InstructorAuditLogsPageComponent should snap when searching for details in search form 1`] = `
<tm-instructor-audit-logs-page
  LOGS_RETENTION_PERIOD={[Function Number]}
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courseToStudents={[Function Object]}
  courses={[Function Array]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  formModel={[Function Object]}
  isLoading="false"
  isSearching={[Function Boolean]}
  logsService={[Function LogService]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session for a given course. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><div
    class="card bg-form no-border"
  >
    <div
      class="card-body"
    >
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="font-weight-bold"
              for="course-id-dropdown"
            >
              Course ID
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control col-12 ng-untouched ng-pristine ng-valid"
              id="course-id-dropdown"
            >
              <option
                disabled=""
                hidden=""
                selected=""
                value=""
              >
                Select Course ID
              </option>
              
              <option>
                 CS9999 
              </option>
              <option>
                 MA1234 
              </option>
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="font-weight-bold"
              for="logs-from-datepicker"
            >
              Search period from
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="logs-from-datepicker"
                ngbdatepicker=""
                type="text"
              />
              <button
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
              id="logs-from-timepicker"
            >
              <tm-time-picker>
                <select
                  class="form-control ng-untouched ng-pristine ng-valid"
                >
                  
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                  
                </select>
              </tm-time-picker>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="font-weight-bold"
              for="student-name-dropdown"
            >
              Student Name (Optional)
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control col-12 ng-untouched ng-pristine ng-valid"
              id="student-name-dropdown"
            >
              
              <option
                value="doejohn@email.com"
              >
                 Doe John &lt;doejohn@email.com&gt; 
              </option>
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="font-weight-bold"
              for="logs-to-datepicker"
            >
              Search period until
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="logs-to-datepicker"
                ngbdatepicker=""
                type="text"
              />
              <button
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
              id="logs-to-timepicker"
            >
              <tm-time-picker>
                <select
                  class="form-control ng-untouched ng-pristine ng-valid"
                >
                  
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                  
                </select>
              </tm-time-picker>
            </div>
            <div
              class="col-md-2"
            >
              <button
                class="float-right btn btn-primary"
                disabled=""
                id="search-button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    id="logs-output"
  >
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div>
</tm-instructor-audit-logs-page>
`;

exports[`InstructorAuditLogsPageComponent should snap with default fields 1`] = `
<tm-instructor-audit-logs-page
  LOGS_RETENTION_PERIOD={[Function Number]}
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courseToStudents={[Function Object]}
  courses={[Function Array]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  formModel={[Function Object]}
  isLoading={[Function Boolean]}
  isSearching="false"
  logsService={[Function LogService]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session for a given course. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><div
    id="logs-output"
  >
    
    <div>
      
    </div>
  </div>
</tm-instructor-audit-logs-page>
`;

exports[`InstructorAuditLogsPageComponent should snap with results of a search 1`] = `
<tm-instructor-audit-logs-page
  LOGS_RETENTION_PERIOD={[Function Number]}
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courseToStudents={[Function Object]}
  courses={[Function Array]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  formModel={[Function Object]}
  isLoading="false"
  isSearching="false"
  logsService={[Function LogService]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session for a given course. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><div
    class="card bg-form no-border"
  >
    <div
      class="card-body"
    >
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="font-weight-bold"
              for="course-id-dropdown"
            >
              Course ID
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control col-12 ng-untouched ng-pristine ng-valid"
              id="course-id-dropdown"
            >
              <option
                disabled=""
                hidden=""
                selected=""
                value=""
              >
                Select Course ID
              </option>
              
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="font-weight-bold"
              for="logs-from-datepicker"
            >
              Search period from
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="logs-from-datepicker"
                ngbdatepicker=""
                type="text"
              />
              <button
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
              id="logs-from-timepicker"
            >
              <tm-time-picker>
                <select
                  class="form-control ng-untouched ng-pristine ng-valid"
                >
                  
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                  
                </select>
              </tm-time-picker>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="font-weight-bold"
              for="student-name-dropdown"
            >
              Student Name (Optional)
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control col-12 ng-untouched ng-pristine ng-valid"
              id="student-name-dropdown"
            >
              
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="font-weight-bold"
              for="logs-to-datepicker"
            >
              Search period until
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="logs-to-datepicker"
                ngbdatepicker=""
                type="text"
              />
              <button
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
              id="logs-to-timepicker"
            >
              <tm-time-picker>
                <select
                  class="form-control ng-untouched ng-pristine ng-valid"
                >
                  
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                  
                </select>
              </tm-time-picker>
            </div>
            <div
              class="col-md-2"
            >
              <button
                class="float-right btn btn-primary"
                disabled=""
                id="search-button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div><div
    id="logs-output"
  >
    
    <div>
      
      <div>
        <div
          class="card mb-3 alert-success-border"
        >
          <div
            class="card-header alert-success cursor-pointer"
          >
             Feedback session 1 
            <div
              class="card-header-btn-toolbar"
            >
              <tm-panel-chevron>
                <div
                  class="chevron"
                >
                  
                  
                  <i
                    class="fas fa-chevron-up"
                  />
                </div>
              </tm-panel-chevron>
            </div>
          </div>
          
          <div>
            
            <div
              class="card-body"
            >
              <tm-sortable-table>
                <table
                  class="table table-bordered table-striped margin-bottom-20px"
                >
                  <thead>
                    <tr>
                      
                      <th
                        class="sortable-header"
                      >
                        <span
                          container="body"
                        >
                          Time
                        </span>
                        
                        <span
                          class="fa-stack"
                        >
                          <i
                            class="fas fa-sort"
                          />
                          
                          
                        </span>
                      </th>
                      <th
                        class="sortable-header"
                      >
                        <span
                          container="body"
                        >
                          Name
                        </span>
                        
                        <span
                          class="fa-stack"
                        >
                          <i
                            class="fas fa-sort"
                          />
                          
                          
                          <i
                            class="fas fa-sort-up"
                          />
                        </span>
                      </th>
                      <th
                        class="sortable-header"
                      >
                        <span
                          container="body"
                        >
                          Activity
                        </span>
                        
                        <span
                          class="fa-stack"
                        >
                          <i
                            class="fas fa-sort"
                          />
                          
                          
                        </span>
                      </th>
                      <th
                        class="sortable-header"
                      >
                        <span
                          container="body"
                        >
                          Email
                        </span>
                        
                        <span
                          class="fa-stack"
                        >
                          <i
                            class="fas fa-sort"
                          />
                          
                          
                        </span>
                      </th>
                      <th
                        class="sortable-header"
                      >
                        <span
                          container="body"
                        >
                          Section
                        </span>
                        
                        <span
                          class="fa-stack"
                        >
                          <i
                            class="fas fa-sort"
                          />
                          
                          
                        </span>
                      </th>
                      <th
                        class="sortable-header"
                      >
                        <span
                          container="body"
                        >
                          Team
                        </span>
                        
                        <span
                          class="fa-stack"
                        >
                          <i
                            class="fas fa-sort"
                          />
                          
                          
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    
                    <tr>
                      
                      <td
                        style=""
                      >
                        
                        
                        
                        
                        15 January 2021
                      </td>
                      <td
                        style=""
                      >
                        
                        
                        
                        
                        Doe John
                      </td>
                      <td
                        style=""
                      >
                        
                        
                        
                        
                        Viewed the submission page
                      </td>
                      <td
                        style=""
                      >
                        
                        
                        
                        
                        doejohn@email.com
                      </td>
                      <td
                        style=""
                      >
                        
                        
                        
                        
                        section 1
                      </td>
                      <td
                        style=""
                      >
                        
                        
                        
                        
                        team 1
                      </td>
                    </tr>
                  </tbody>
                </table>
              </tm-sortable-table>
            </div>
            
          </div>
        </div>
      </div>
      <div>
        <div
          class="card mb-3 alert-success-border"
        >
          <div
            class="card-header alert-success cursor-pointer"
          >
             Feedback session 2 
            <div
              class="card-header-btn-toolbar"
            >
              <tm-panel-chevron>
                <div
                  class="chevron"
                >
                  
                  
                  <i
                    class="fas fa-chevron-up"
                  />
                </div>
              </tm-panel-chevron>
            </div>
          </div>
          
          <div>
            
            <div
              class="no-activity-body"
            >
              <i>
                No activity for this feedback session in selected search period
              </i>
            </div>
            
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-instructor-audit-logs-page>
`;
